--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -26,7 +26,9 @@ jobs:
           go-version: '1.21.4'
 
       - name: Install Dependencies
-        run: go get .
+        run: |
+          go get .
+          go install gotest.tools/gotestsum@latest
 
       - name: Build
         run: go build -v .
@@ -37,4 +39,8 @@ jobs:
           path: ./qf-idl-solver
 
       - name: Test
-        run: go test -short ./...
+        run: gotestsum --junitfile ./unit-tests.xml -- -short ./...
+      - name: Test Summary
+        uses: test-summary/action@v2
+        with:
+          paths: ./unit-tests.xml
