--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Install Dependencies
         run: |
           go get .
+          go get gotest.tools/gotestsum@latest
           go install gotest.tools/gotestsum@latest
 
       - name: Build
