--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,21 @@ env:
 
 jobs:
 
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ env.QF_IDL_SOLVER_GO_VERSION }}
+      - name: Go Vet
+        run: go vet ./...
+      - name: Go Fmt
+        run: '[[ "$(gofmt -d -e . | wc -l)" -eq 0 ]]'
+
   test:
     name: Test
     runs-on: ubuntu-latest
@@ -42,7 +57,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [lint, test]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
